--- a/resume.html
+++ b/resume.html
@@ -23,7 +23,7 @@
 						<section id="content" class="main">
 							<!-- Embed the resume -->
 							<h2>My Resume</h2>
-							<a href="https://haolehawaiian.github.io/assets/Ethan%20Maluhia%20Resume.pdf" download="Ethan-Maluhia-Roberts-Resume.pdf" class="button">Download Resume</a>
+							<a href="https://haolehawaiian.github.io/assets/Ethan%20Maluhia%20Resume.pdf" download="Ethan-Maluhia-Roberts-Resume.pdf">Download and share!</a>
 							<iframe src="https://haolehawaiian.github.io/assets/Ethan%20Maluhia%20Resume.pdf" width="100%" height="600px" style="border: none;"></iframe>
 							<p>If you would like to download my resume, click below:</p>
 							<a href="https://raw.githubusercontent.com/HaoleHawaiian/haolehawaiian.github.io/main/assets/Ethan%20Maluhia%20Resume.pdf" download="Ethan-Maluhia-Roberts-Resume.pdf" class="button">Download Resume</a>
