--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,9 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Ethan Maluhia Roberts Resume</title>
+		<title>Ethan Maluhia Roberts</title>
+		<p>Data Detective. Analytics Adventurer. Statistical Strategist. <br>
+		Connect with me on <a href="https://www.linkedin.com/in/maluhia-roberts/" target="_blank" rel="noopener noreferrer">LinkedIn</a>.</p>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -12,18 +14,17 @@
 		<!-- Wrapper -->
 			<div id="wrapper">
 				<!-- Header -->
-					<header id="header">
-						<h1>Ethan Maluhia Roberts Resume</h1>
-						<!-- <p>Ipsum dolor sit amet nullam</p> -->
-					</header>
+					<!-- <header id="header">
+						<!-- <h1>My Resume</h1> -->
+						<h4><a href="https://sentimental-post.shinyapps.io/Sentimental/" class="button" target="_blank" rel="noopener noreferrer"><span class="label">Test It Out</span></a></h4>
+					</header> -->
 
 				<!-- Main -->
 					<div id="main">
 						<!-- Content -->
 						<section id="content" class="main">
 							<!-- Embed the resume -->
-							<h2>My Resume</h2>
-							<a href="https://haolehawaiian.github.io/assets/Ethan%20Maluhia%20Resume.pdf" download="Ethan-Maluhia-Roberts-Resume.pdf">Download and share!</a>
+							<h2><a href="https://haolehawaiian.github.io/assets/Ethan%20Maluhia%20Resume.pdf" download="Ethan-Maluhia-Roberts-Resume.pdf">Download and Share!</a></h2>
 							<iframe src="https://haolehawaiian.github.io/assets/Ethan%20Maluhia%20Resume.pdf" width="100%" height="600px" style="border: none;"></iframe>
 							<p>If you would like to download my resume, click below:</p>
 							<a href="https://raw.githubusercontent.com/HaoleHawaiian/haolehawaiian.github.io/main/assets/Ethan%20Maluhia%20Resume.pdf" download="Ethan-Maluhia-Roberts-Resume.pdf" class="button">Download Resume</a>
