--- a/resume.html
+++ b/resume.html
@@ -14,10 +14,12 @@
 		<!-- Wrapper -->
 			<div id="wrapper">
 				<!-- Header -->
-					<!-- <header id="header">
-						<!-- <h1>My Resume</h1> -->
-						<h4><a href="https://sentimental-post.shinyapps.io/Sentimental/" class="button" target="_blank" rel="noopener noreferrer"><span class="label">Test It Out</span></a></h4>
-					</header> -->
+					<header id="header" class="alt">
+						<!-- <span class="logo"><img src="images/logo.svg" alt="" /></span> -->
+						<h1>Ethan Maluhia Roberts</h1>
+						<p>Data Detective. Analytics Adventurer. Statistical Strategist. <br>
+						Connect with me on <a href="https://www.linkedin.com/in/maluhia-roberts/" target="_blank" rel="noopener noreferrer">LinkedIn</a>.</p>
+					</header>
 
 				<!-- Main -->
 					<div id="main">
@@ -26,8 +28,8 @@
 							<!-- Embed the resume -->
 							<h2><a href="https://haolehawaiian.github.io/assets/Ethan%20Maluhia%20Resume.pdf" download="Ethan-Maluhia-Roberts-Resume.pdf">Download and Share!</a></h2>
 							<iframe src="https://haolehawaiian.github.io/assets/Ethan%20Maluhia%20Resume.pdf" width="100%" height="600px" style="border: none;"></iframe>
-							<p>If you would like to download my resume, click below:</p>
-							<a href="https://raw.githubusercontent.com/HaoleHawaiian/haolehawaiian.github.io/main/assets/Ethan%20Maluhia%20Resume.pdf" download="Ethan-Maluhia-Roberts-Resume.pdf" class="button">Download Resume</a>
+							
+							
 						</section>
 
 					</div>
