--- a/resume.html
+++ b/resume.html
@@ -1,9 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Ethan Maluhia Roberts</title>
-		<p>Data Detective. Analytics Adventurer. Statistical Strategist. <br>
-		Connect with me on <a href="https://www.linkedin.com/in/maluhia-roberts/" target="_blank" rel="noopener noreferrer">LinkedIn</a>.</p>
+		<title>Ethan Maluhia Roberts Resume</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
