--- a/resume.html
+++ b/resume.html
@@ -24,10 +24,8 @@
 						<!-- Content -->
 						<section id="content" class="main">
 							<!-- Embed the resume -->
-							<a href="https://haolehawaiian.github.io/assets/Ethan%20Maluhia%20Resume.pdf" download="Ethan-Maluhia-Roberts-Resume.pdf" class="button">Download and Share!</a>
+							<a href="https://haolehawaiian.github.io/assets/Ethan%20Maluhia%20Resume.pdf" download="Ethan-Maluhia-Roberts-Resume.pdf" class="button">Download and Share!</a><br>
 							<iframe src="https://haolehawaiian.github.io/assets/Ethan%20Maluhia%20Resume.pdf" width="100%" height="600px" style="border: none;"></iframe>
-							
-							
 						</section>
 
 					</div>
