--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 										</header>
 										<p>I'm Maluhia, I love working on machine learning models as well as process analysis and improvement. I use data to clear up intuition and opinion to make decisions. I'm motivated by making a difference with my work. I like when my work gets real results that affect those around me. It takes effort to push a project from ideas formation to production and I don't like to stop my work until its producing useable insights based on data. I have an MS in Analytics from Georgia Institute of Technology and a BS in Computer Science from BYU-Hawai'i.</p>
 										<ul class="actions">
-											<li><a href="resume.html" class="button">Check Out My Resume</a></li>
+											<li><a href="resume.html" target="_blank" rel="noopener noreferrer" class="button">Check Out My Resume</a></li>
 										</ul>
 									</div>
 									<!-- <span class="image"><img src="images/pic01.jpg" alt="" /></span> -->
