--- a/index.html
+++ b/index.html
@@ -81,6 +81,13 @@
 									</li>
 									<li>
 										<span class="icon solid major style1 fa-gem"></span>
+										<h3>Pokemon Team Personality Recommender</h3>
+										<p class="skills">Python, NLP</p>
+										<p>This project takes personality inputs from a user, compares them to the Pokedex descriptions for each Pokemon, then returns a team based on cosine similarity. The project utilizes natrual language processing techniques such as Bag of Words, Term Frequency Inverse Document Frequency, GloVe, and BERT.</p>
+										<h4><a href="https://github.com/HaoleHawaiian/Pokemon-Team-Maker" class="button" target="_blank" rel="noopener noreferrer"><span class="label">Try It</span></a></h4>
+									</li>
+									<li>
+										<span class="icon solid major style1 fa-code"></span>
 										<h3>Confusion Matrix Scaler</h3>
 										<p class="skills">R, R Shiny, Classification</p>
 										<p>This R Shiny tool is for scaling a confusion matrix up or down. I use the Scaler for compensating inaccuracies in a training/testing matrix against a new binary classification prediction. If my accuracy in training/testing is anything other than 100%, I want to be able to break down how many of the Predicted Positives and Predicted Negatives are likely to be False Positives and False Negatives. I use this on sales pipelines, after using classification methods to predict which deals will are likely to be closed won and which are likely to be closed lost.</p>
