--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 									<li>
 										<span class="icon solid major style1 fa-gem"></span>
 										<h3>Pokemon Team Personality Recommender</h3>
-										<p class="skills">Python, NLP</p>
+										<p class="skills">Python, Natural Language Processing, APIs</p>
 										<p>This project takes personality inputs from a user, compares them to the Pokedex descriptions for each Pokemon, then returns a team based on cosine similarity. The project utilizes natrual language processing techniques such as Bag of Words, Term Frequency Inverse Document Frequency, GloVe, and BERT.</p>
 										<h4><a href="https://github.com/HaoleHawaiian/Pokemon-Team-Maker" class="button" target="_blank" rel="noopener noreferrer"><span class="label">Check It Out</span></a></h4>
 									</li>
