--- a/index.html
+++ b/index.html
@@ -76,8 +76,6 @@
 										<p>Our goal was to transform the way consumer finance complaints from the Consumer Finance Protection Bureau (CFPB) database are visualized, understood, and addressed. We highlight patterns and trends in customer complaints using techniques such as LDA, VADER, and Bigram Analysis; and we continue to predict future complaint trajectories through Facebook Prophet and ARIMA.</p>
 										<h4><a href="https://github.com/c3vani/cse6242_na_mele_menehune" class="button" target="_blank" rel="noopener noreferrer"><span class="label">GitHub & Results</span></a></h4>									
 										<h4><a href="https://public.tableau.com/app/profile/hillary.latham5228/viz/Complainalyzer/Complainalyzer" class="button" target="_blank" rel="noopener noreferrer"><span class="label">Tableau Dashboard</span></a></h4>
-										<!-- h4><a href="https://github.com/HaoleHawaiian/haolehawaiian.github.io/blob/main/assets/Complainalyzer%20Results%20Report" class="button">Results Report</a></h4> -->
-										<!-- <h4><a href="https://github.com/HaoleHawaiian/haolehawaiian.github.io/blob/main/assets/Complainalyzer%20Results%20Poster" class="button">Results Poster</a></h4> -->
 									</li>
 									<li>
 										<span class="icon solid major style1 fa-gem"></span>
@@ -92,6 +90,13 @@
 										<p class="skills">R, R Shiny, Classification</p>
 										<p>This R Shiny tool is for scaling a confusion matrix up or down. I use the Scaler for compensating inaccuracies in a training/testing matrix against a new binary classification prediction. If my accuracy in training/testing is anything other than 100%, I want to be able to break down how many of the Predicted Positives and Predicted Negatives are likely to be False Positives and False Negatives. I use this on sales pipelines, after using classification methods to predict which deals will are likely to be closed won and which are likely to be closed lost.</p>
 										<h4><a href="https://sentimental-post.shinyapps.io/ConfusionMatrixScaler/" class="button" target="_blank" rel="noopener noreferrer"><span class="label">Try It</span></a></h4>
+									</li>
+									<li>
+										<span class="icon solid major style1 fa-gem"></span>
+										<h3>Pandemic Simulation</h3>
+										<p class="skills">Python, Statistical Analysis</p>
+										<p>This statistical analysis compares different pandemic scenarios and compares the severities of the situations. The project aimed to mimic real virus statistics, population density statistics, and vaccine distribution statistics.</p>
+										<h4><a href="https://haolehawaiian.github.io/assets/Pandemic%20Simulation%20Report.pdf" class="button" target="_blank" rel="noopener noreferrer"><span class="label">Read It</span></a></h4>
 									</li>
 								</ul>
 								<!-- <footer class="major">
