--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
 										<h4><a href="https://pokemon-team-maker.streamlit.app/" class="button" target="_blank" rel="noopener noreferrer"><span class="label">Check It Out</span></a></h4>
 									</li>
 									<li>
-										<span class="icon solid major style1 fa-code"></span>
+										<span class="icon solid major style1 fa-lightbulb"></span>
 										<h3>Confusion Matrix Scaler</h3>
 										<p class="skills">R, R Shiny, Classification</p>
 										<p>This R Shiny tool is for scaling a confusion matrix up or down. I use the Scaler for compensating inaccuracies in a training/testing matrix against a new binary classification prediction. If my accuracy in training/testing is anything other than 100%, I want to be able to break down how many of the Predicted Positives and Predicted Negatives are likely to be False Positives and False Negatives. I use this on sales pipelines, after using classification methods to predict which deals will are likely to be closed won and which are likely to be closed lost.</p>
 										<h4><a href="https://sentimental-post.shinyapps.io/ConfusionMatrixScaler/" class="button" target="_blank" rel="noopener noreferrer"><span class="label">Try It</span></a></h4>
 									</li>
 									<li>
-										<span class="icon solid major style1 fa-gem"></span>
+										<span class="icon solid major style1 fa-paper-plane"></span>
 										<h3>Pandemic Simulation</h3>
 										<p class="skills">Python, Statistical Analysis</p>
 										<p>This statistical analysis compares different pandemic scenarios and compares the severities of the situations. The project aimed to mimic real virus statistics, population density statistics, and vaccine distribution statistics.</p>
