--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/in/maluhia-roberts/" class="icon brands fa-linkedin alt" target="_blank" rel="noopener noreferrer"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/HaoleHawaiian" class="icon brands fa-github alt" target="_blank" rel="noopener noreferrer"><span class="label">GitHub</span></a></li>
-
+								<li><a href="mailto:ethan.m.roberts68@gmail.com" class="icon fas fa-envelope alt" target="_blank" rel="noopener noreferrer"><span class="label">Email</span></a></li>
 							</ul>
 						</section>
 						<p Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
