--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
 								<dd><a href="https://www.linkedin.com/in/maluhia-roberts/" target="_blank" rel="noopener noreferrer">https://www.linkedin.com/in/maluhia-roberts/</a></dd>
 								<dt>GitHub</dt>
 								<dd><a href="https://github.com/HaoleHawaiian" target="_blank" rel="noopener noreferrer">https://github.com/HaoleHawaiian</a></dd>
-								<!-- <dt>Email</dt>
-								<dd><a href="alohaethan@yahoo.com">alohaethan@yahoo.com</a></dd> -->
+								<dt>Email</dt>
+								<dd><a href="mailto:ethan.m.roberts68@gmail.com" target="_blank" rel="noopener noreferrer">ethan.m.roberts68@gmail.com</a></dd>
 							</dl>
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/in/maluhia-roberts/" class="icon brands fa-linkedin alt" target="_blank" rel="noopener noreferrer"><span class="label">LinkedIn</span></a></li>
