--- a/index.html
+++ b/index.html
@@ -135,24 +135,25 @@
 							<section id="skills" class="main special">
 								<header class="major">
 								<h2>Skills</h2>
-								<p>Discover the skills section for an overview of my technical proficiencies. This part highlights the specific abilities and knowledge I've acquired, demonstrating my capability to excel in various projects and collaborative efforts</p>
+								<!-- <p>Discover the skills section for an overview of my technical proficiencies. This part highlights the specific abilities and knowledge I've acquired, demonstrating my capability to excel in various projects and collaborative efforts</p> -->
 								</header>
 							<ul class="features">
 								<li>
 									<span class="icon solid major style1 fa-code"></span>
-									<h3>Languages & Technology</h3>
-									<p>Python, NumPy, Pandas, Scikit-Learn<br>
+									<h3><strong></strong>Languages & Technology</strong></h3>
+									<p>Python<br>
+										NumPy, Pandas<br>
+										Scikit-Learn, NLTK<br>
 										R, R Shiny<br>
 										SQL, SQLite<br>
 										Excel, VBA <br>
-										Tableau<br>
-										Power BI<br>
+										Tableau, Power BI<br>
 										Jupyter Notebooks
 									</p>
 								</li>
 								<li>
 									<span class="icon major style3 fa-paper-plane"></span>
-									<h3>Data</h3>
+									<h3><strong>Data</strong></h3>
 									<p>Time Series Analysis<br>
 										Exploratory Data Analysis<br>
 										Natural Language Processing<br>
@@ -165,14 +166,15 @@
 								</li>
 								<li>
 									<span class="icon major style5 fa-clipboard"></span>
-									<h3>Business</h3>
+									<h3><strong>Business</strong></h3>
 									<p>Sales Forecasting<br>
-										Process Analysis & Automation<br>
+										Process Improvement & Automation<br>
 										Project Management<br>
 										Customer Segmentation<br>
 										Churn Analysis<br>
 										Product Development & Analytics<br>
 										A/B Testing<br>
+										KPI Benchmarking
 									</p>
 								</li>
 							</ul>
