--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 							<ul class="features">
 								<li>
 									<span class="icon solid major style1 fa-code"></span>
-									<h3><strong></strong>Languages & Technology</strong></h3>
+									<h3><strong>Languages & Technology</strong></h3>
 									<p>Python<br>
 										NumPy, Pandas<br>
 										Scikit-Learn, NLTK<br>
