--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
 								<p>Take a look at what I've been working on</p>
 								<ul class="features">
 									<li>
-										<span class="icon solid major style1 fa-code"></span>
+										<img src="images/Sentimental.png" alt="Sentimental Icon" class="icon solid major style1">
 										<h3>Sentimental</h3>
 										<p class="skills">R, R Shiny, Natural Language Processing</p>
 										<p>This R Shiny tool is for blog writers and email marketers to see the sentiment and flow of their writing. The users get sentiment counts along with highlighted words associated with the count, a summary of what they wrote, ratio comparisons of sentiments, a list of ambiguous words to update to make their message more clear, and a writing trajectory which measures message valence by sentence. (The US Declaration of Independence is a great sample, takes about 21 seconds)</p>
 										<h4><a href="https://sentimental-post.shinyapps.io/Sentimental/" class="button" target="_blank" rel="noopener noreferrer"><span class="label">Test It Out</span></a></h4>
 									</li>
 									<li>
-										<span class="icon major style4 fa-copy"></span>
+										<img src="images/Complainalyzer.png" alt="Sentimental Icon" class="icon solid major style1">
 										<h3>Complainalyzer</h3>
 										<p class="skills">Python, R, Tableau, Time Series Analysis, Natural Language Processing</p>
 										<p>Our goal was to transform the way consumer finance complaints from the Consumer Finance Protection Bureau (CFPB) database are visualized, understood, and addressed. We highlight patterns and trends in customer complaints using techniques such as LDA, VADER, and Bigram Analysis; and we continue to predict future complaint trajectories through Facebook Prophet and ARIMA.</p>
@@ -78,21 +78,21 @@
 										<h4><a href="https://public.tableau.com/app/profile/hillary.latham5228/viz/Complainalyzer/Complainalyzer" class="button" target="_blank" rel="noopener noreferrer"><span class="label">Tableau Dashboard</span></a></h4>
 									</li>
 									<li>
-										<span class="icon solid major style3 fa-gem"></span>
+										<img src="images/Pokemon.png" alt="Sentimental Icon" class="icon solid major style1">
 										<h3>Pokemon Team Personality Recommender</h3>
 										<p class="skills">Python, Natural Language Processing, APIs</p>
 										<p>This project takes personality inputs from a user, compares them to the Pokedex descriptions for each Pokemon, then returns a team based on cosine similarity. The project utilizes natural language processing techniques such as Bag of Words, Term Frequency Inverse Document Frequency, GloVe, and BERT.</p>
 										<h4><a href="https://pokemon-team-maker.streamlit.app/" class="button" target="_blank" rel="noopener noreferrer"><span class="label">Check It Out</span></a></h4>
 									</li>
 									<li>
-										<span class="icon solid major style2 fa-lightbulb"></span>
+										<img src="images/CM Scaler.png" alt="Sentimental Icon" class="icon solid major style1">
 										<h3>Confusion Matrix Scaler</h3>
 										<p class="skills">R, R Shiny, Classification</p>
 										<p>This R Shiny tool is for scaling a confusion matrix up or down. I use the Scaler for compensating inaccuracies in a training/testing matrix against a new binary classification prediction. If my accuracy in training/testing is anything other than 100%, I want to be able to break down how many of the Predicted Positives and Predicted Negatives are likely to be False Positives and False Negatives. I use this on sales pipelines, after using classification methods to predict which deals will are likely to be closed won and which are likely to be closed lost.</p>
 										<h4><a href="https://sentimental-post.shinyapps.io/ConfusionMatrixScaler/" class="button" target="_blank" rel="noopener noreferrer"><span class="label">Try It</span></a></h4>
 									</li>
 									<li>
-										<span class="icon solid major style3 fa-paper-plane"></span>
+										<img src="images/Pandemic.png" alt="Sentimental Icon" class="icon solid major style1">
 										<h3>Pandemic Simulation</h3>
 										<p class="skills">Python, Statistical Analysis</p>
 										<p>This statistical analysis compares different pandemic scenarios and compares the severities of the situations. The project aimed to mimic real virus statistics, population density statistics, and vaccine distribution statistics.</p>
