--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 								<li>
 									<span class="icon solid major style1 fa-code"></span>
 									<h3><strong>Languages & Technology</strong></h3>
-									<p>Python<br>
+									<p>Python, PyTorch<br>
 										NumPy, Pandas<br>
 										Scikit-Learn, NLTK<br>
 										R, R Shiny<br>
@@ -160,6 +160,7 @@
 									<span class="icon major style3 fa-paper-plane"></span>
 									<h3><strong>Data</strong></h3>
 									<p>Time Series Analysis<br>
+										Neural Networks<br>
 										Exploratory Data Analysis<br>
 										Natural Language Processing<br>
 										Machine Learning<br>
