spelling on the DL project

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 										<!-- <span class="icon solid major style1 fa-language"></span> -->
 										<h3>Breaking Grad(ients)</h3>
 										<p class="skills">Deep Learning, PyTorch, Object Oriented Programming, Neural Networks, Vision Transformers</p>
-										<p>This Deep Learning project explores the affects of Fast Gradient Sign Method attacks on pre-trained models such as EfficientNet, Data Efficient Image Transformers, and our own custom JuanchitoCNN. We wanted to show how these models react to the common white-box attack of FGSM when discriminating between AI generated and naturally generated images.</p>
+										<p>This Deep Learning project explores the effects of Fast Gradient Sign Method attacks on pre-trained models such as EfficientNet, Data Efficient Image Transformers, and our own custom JuanchitoCNN. We wanted to show how these models react to the common white-box attack of FGSM when discriminating between AI generated and naturally generated images.</p>
 										<h4><a href="https://haolehawaiian.github.io/assets/Breaking_Grad(ients).pdf" class="button" target="_blank" rel="noopener noreferrer"><span class="label">Read the Report</span></a></h4>
 										<h4><a href="https://github.com/HaoleHawaiian/real_or_rendered" class="button" target="_blank" rel="noopener noreferrer"><span class="label">GitHub & Code</span></a></h4>									
 
