Removed "In Progress" work since that was from last company

--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
 											<li>Developed and implemented A/B tests (DOE) for evaluating the performance of marketing assets, resulting in an increase of click-through rates from 5% to 13% on ads, and 15% to 22% on whitepapers</li>
 											<li>Formalized reporting, centralized data into HubSpot, and created redundancies for regular data quality checks leading to a sales pipeline increase of over 20%, as well as a 541% increase sales leads</li>
 										</ul>
-										<h3>In Progress</h3>
+										<!--<h3>In Progress</h3>
 										<ul>
 											<li>Using classification in product development for a marketing and advertising product</li>
 											<li>Using multiple regression in product development for marketing and advertising forecasts</li>
 											<li>Using clustering for client segmentation</li>
-										</ul>
+										</ul>-->
 									</div>
 								</div>
 							</section>
