Updated to include Paramark description and skills

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 										<header class="major">
 											<h2>About Me</h2>
 										</header>
-										<p>I'm Maluhia, I love working on machine learning models as well as process analysis and improvement. I use data to clear up intuition and opinion to make decisions. I'm motivated by making a difference with my work. I like when my work gets real results that affect those around me. It takes effort to push a project from ideas formation to production and I don't like to stop my work until its producing useable insights based on data. I have an MS in Analytics from Georgia Institute of Technology and a BS in Computer Science from BYU-Hawai'i.</p>
+										<p>I'm Maluhia, I love working on machine learning models as well as process analysis and improvement. Currently I am a founding member of the Solutions Engineering team at Paramark, a startup in San Francisco. There, I'm a full stack data professional, working in Python to do ETL on client marketing data, train and tune ML models, and design and analyze marketing budget experiments. I act as a relief team, taking analysis work off the software engineers' plates to let them work on the product that I use to analyze data! I have an MS in Analytics from Georgia Institute of Technology and a BS in Computer Science from BYU-Hawai'i.</p>
 										<ul class="actions">
 											<li><a href="resume.html" target="_blank" rel="noopener noreferrer" class="button">Check Out My Resume</a></li>
 										</ul>
@@ -190,7 +190,8 @@
 										Churn Analysis<br>
 										Product Development & Analytics<br>
 										A/B Testing<br>
-										KPI Benchmarking
+										KPI Benchmarking<br>
+										Marketing Experimentation
 									</p>
 								</li>
 							</ul>
@@ -238,3 +239,4 @@
 
 	</body>
 </html>
+
