General updates to work

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 										<header class="major">
 											<h2>About Me</h2>
 										</header>
-										<p>I'm Maluhia, I love working on machine learning models as well as process analysis and improvement. Currently I am a founding member of the Solutions Engineering team at Paramark, a startup in San Francisco. There, I'm a full stack data professional, working in Python to do ETL on client marketing data, train and tune ML models, and design and analyze marketing budget experiments. I act as a relief team, taking analysis work off the software engineers' plates to let them work on the product that I use to analyze data! I have an MS in Analytics from Georgia Institute of Technology and a BS in Computer Science from BYU-Hawai'i.</p>
+										<p>I'm Maluhia, I love working on machine learning models as well as process analysis and improvement. Currently I am a founding member of the Solutions Engineering team at Paramark, a startup in San Francisco working on Marketing Mix Models for enterprise level marketing organizations. I'm a full stack data professional, working in Python to do ETL on client marketing data, training and tuning ML models, and designing, analyzing, and recommending marketing budget experiments. I act as a relief team, taking analysis work off the software engineers' plates to let them work on the product that I use to analyze data! I have an MS in Analytics from Georgia Institute of Technology and a BS in Computer Science from BYU-Hawai'i.</p>
 										<ul class="actions">
 											<li><a href="resume.html" target="_blank" rel="noopener noreferrer" class="button">Check Out My Resume</a></li>
 										</ul>
@@ -129,20 +129,22 @@
 											<h2>Work Projects</h2>
 										</header>
 										<p>While my personal work is public, here is some of the more proprietary work I do: <!-- or check out my <a href="https://haolehawaiian.github.io/resume.html" target="_blank" rel="noopener noreferrer">resume</a>: --></p>
+										<h3>In Progress</h3>
+										<ul>
+											<li>Founding and building out the Solutions Engineering team; helping hire, train, and mentor new engineers to independence, as well as develop team processes and documentation</li>
+											<li>Partnering with software engineers to design, build, and implement Marketing Mix Modeling (MMM) and ETL product features to increase processing efficiency and scalability</li>
+										</ul>
 										<h3>Completed</h3>
 										<ul>
+											<h4>Quid</h4>
 											<li>Developed, validated, and deployed new time-series machine learning models, reducing average sales forecasting error from +16% to +1.5%</li>
-											<li>Identified waste in the sales forecasting process through data collection, ETL (Extract, Transform, Load) operations, exploration, and financial model prototyping, leading to a more scalable process and reducing time spent on forecasting tasks by 80%</li>
+											<li>Optimized sales forecasting workflows through data collection, ETL automation, data exploration, and financial model prototyping, leading to a more scalable process and reducing time spent on forecasting tasks by 80%</li>
 											<li>Coordinated new Professional Services strategy among accounting, services, and sales operations teams, leading to a 50% reduction in time spent processing so far and a 90% reduction in by-hand errors</li>
+											<h4>iPayables</h4>
 											<li>Developed and implemented A/B tests (DOE) for evaluating the performance of marketing assets, resulting in an increase of click-through rates from 5% to 13% on ads, and 15% to 22% on whitepapers</li>
-											<li>Formalized reporting, centralized data into HubSpot, and created redundancies for regular data quality checks leading to a sales pipeline increase of over 20%, as well as a 541% increase sales leads</li>
+											<li>Built data pipelines and reporting automations in CRMs, creating transparency (and frankly, encouraging competition in the sales team) leading to a sales pipeline increase of over 20%, as well as a 541% increase sales leads</li>
 										</ul>
-										<!--<h3>In Progress</h3>
-										<ul>
-											<li>Using classification in product development for a marketing and advertising product</li>
-											<li>Using multiple regression in product development for marketing and advertising forecasts</li>
-											<li>Using clustering for client segmentation</li>
-										</ul>-->
+										
 									</div>
 								</div>
 							</section>
@@ -161,7 +163,7 @@
 										Scikit-Learn, NLTK<br>
 										R, R Shiny<br>
 										SQL, SQLite<br>
-										Excel, VBA <br>
+										Snowflake, S3 (AWS) <br>
 										Tableau, Power BI<br>
 										Jupyter Notebooks
 									</p>
@@ -183,15 +185,14 @@
 								<li>
 									<span class="icon major style5 fa-clipboard"></span>
 									<h3><strong>Business</strong></h3>
-									<p>Sales Forecasting<br>
+									<p>Sales/Marketing Forecasting & Analysis<br>
+										Experiment Design & Analysis<br>
 										Process Improvement & Automation<br>
 										Project Management<br>
 										Customer Segmentation<br>
 										Churn Analysis<br>
 										Product Development & Analytics<br>
 										A/B Testing<br>
-										KPI Benchmarking<br>
-										Marketing Experimentation
 									</p>
 								</li>
 							</ul>
@@ -201,7 +202,7 @@
 				<!-- Footer -->
 					<footer id="contact">
 						<section>
-							<h2>Get In Touch</h2>
+							<br><h2>Get In Touch</h2>
 							<p>I'm always open to new opportunites and collaborations, both personal and professional. Don't hesitate to reach out to me and we can explore how to innovate together.</p>
 							<!-- <ul class="actions">
 								<li><a href="generic.html" class="button">Learn More</a></li>
@@ -239,4 +240,5 @@
 
 	</body>
 </html>
+
 
